<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".view.fragments.Registre2Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.IdentificationActivity">

        <LinearLayout
            android:id="@+id/mImageContent"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="vertical"
            android:background="@drawable/bottom_circle"
            android:layout_alignParentTop="true">

         <TextView
                 android:id="@+id/mImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
                 android:layout_marginTop="70dp"
                 android:textStyle="bold"
                 android:textColor="@color/cardview_light_background"
                 android:layout_marginLeft="150dp"
                 android:textSize="23sp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/mButtonsContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_margin="30dp">

            <EditText
                android:id="@+id/mNameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/name"
                android:paddingLeft="10dp"
                android:inputType="text"
                android:textSize="@dimen/edittext_text_size"
                android:textColorHint="@color/fadedDark"
                android:textColor="@color/primaryDark"
                android:background="@drawable/shape_button"/>

            <EditText
                android:id="@+id/mMobileEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/mobile"
                android:paddingLeft="10dp"
                android:inputType="number"
                android:textSize="@dimen/edittext_text_size"
                android:textColorHint="@color/fadedDark"
                android:textColor="@color/primaryDark"
                android:background="@drawable/shape_button"/>


            <EditText
                android:id="@+id/mAddressEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/address"
                android:paddingLeft="10dp"
                android:inputType="text"
                android:textSize="@dimen/edittext_text_size"
                android:textColorHint="@color/fadedDark"
                android:textColor="@color/primaryDark"
                android:background="@drawable/shape_button"/>

            <EditText
                android:id="@+id/mPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="Enter password"
                android:paddingLeft="10dp"
                android:textSize="@dimen/edittext_text_size"
                android:textColorHint="@color/fadedDark"
                android:textColor="@color/primaryDark"
                android:inputType="text"
                android:background="@drawable/shape_button"/>

            <EditText
                android:id="@+id/mLocationEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/location"
                android:paddingLeft="10dp"
                android:textSize="@dimen/edittext_text_size"
                android:textColorHint="@color/fadedDark"
                android:textColor="@color/primaryDark"
                android:inputType="text"
                android:background="@drawable/shape_button"/>

            <LinearLayout
                android:id="@+id/mSpecialisationLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/mSpecializationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/specialization"
                    android:textStyle="bold"
                    android:textColor="@color/fadedDark"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/mSpecializationSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/fadedDark"
                    android:layout_marginLeft="1dp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/mBioEditText"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:hint="@string/bio"
                android:paddingLeft="10dp"
                android:inputType="text"
                android:textSize="@dimen/edittext_text_size"
                android:textColorHint="@color/fadedDark"
                android:textColor="@color/primaryDark"
                android:background="@drawable/shape_button"/>

            <LinearLayout android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/mAccountTypeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/type_count"
                    android:textStyle="bold"
                    android:textColor="@color/fadedDark"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/mAccountTypeSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/fadedDark"
                    android:layout_marginLeft="1dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/mButtonsContent">


            <Button
                android:id="@+id/mButtonRegistre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shadow"
                android:textSize="15sp"
                android:textColor="@color/cardview_light_background"
                android:text="@string/finish"

                />



        </LinearLayout>

    </RelativeLayout>

</FrameLayout>