<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".view.fragments.Registre1Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.IdentificationActivity">

        <LinearLayout
            android:id="@+id/mImageContent"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="vertical"
            android:background="@drawable/bottom_circle"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/mImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginTop="70dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_light_background"
                android:layout_marginLeft="150dp"
                android:textSize="23sp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/mButtonsContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_margin="30dp">

            <EditText
                android:id="@+id/mLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:paddingLeft="10dp"
                android:textSize="@dimen/edittext_text_size"
                android:textColorHint="@color/fadedDark"
                android:textColor="@color/primaryDark"
                android:inputType="textEmailAddress"
                android:background="@drawable/shape_button"/>

            <EditText
                android:id="@+id/mPassWordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:textSize="@dimen/edittext_text_size"
                android:textColorHint="@color/fadedDark"
                android:textColor="@color/primaryDark"
                android:inputType="textPassword"
                android:background="@drawable/shape_button"/>


            <EditText
                android:id="@+id/mPassWordConfirmeEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password_confirm"
                android:paddingLeft="10dp"
                android:inputType="textPassword"
                android:textColor="@color/primaryDark"
                android:textColorHint="@color/fadedDark"
                android:textSize="@dimen/edittext_text_size"
                android:background="@drawable/shape_button"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_margin="30dp"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/mButtonsContent"
            android:layout_alignParentEnd="true">


            <Button
                android:id="@+id/mButtonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shadow"
                android:textSize="15sp"
                android:textColor="@color/cardview_light_background"
                android:text="@string/next"/>



        </LinearLayout>

    </RelativeLayout>

</FrameLayout>