<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardview_light_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mImageContent"
            android:layout_width="match_parent"
            android:layout_height="211dp"
            android:layout_above="@+id/mButtonsContent"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="-21dp"
            android:background="@drawable/bottom_circle"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="122dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="70dp"
                android:text="@string/add_drug"
                android:textColor="@color/cardview_light_background"
                android:textSize="23sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/mButtonsContent"
            android:layout_width="351dp"
            android:layout_height="352dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <EditText
                android:id="@+id/drug_name"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/shape_button"
                android:hint="@string/drug_name"
                android:importantForAutofill="no"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/primaryDark"
                android:textColorHint="@color/fadedDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/drug_price"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button"
                android:hint="@string/drug_price"
                android:importantForAutofill="no"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/primaryDark"
                android:textColorHint="@color/fadedDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/drug_category"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button"
                android:hint="@string/drug_category"
                android:importantForAutofill="no"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/primaryDark"
                android:textColorHint="@color/fadedDark"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/drug_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:text="Available"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_margin="30dp"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/mButtonsContent"
            android:layout_alignParentEnd="true">


            <Button
                android:id="@+id/add_drug_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:background="@drawable/button_shadow"
                android:textColor="@color/cardview_light_background"
                android:text="@string/add_consultation"/>



        </LinearLayout>



    </RelativeLayout>

</FrameLayout>