<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingBottom="50dp"
    tools:context=".view.fragments.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradientbackground"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="161dp">


            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.143"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.155" />

            <TextView
                android:id="@+id/text_consultation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultation_title"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.31"
                app:layout_constraintStart_toEndOf="@+id/text_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.155" />

            <TextView
                android:id="@+id/text_consultation_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultation_details"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.295"
                app:layout_constraintStart_toEndOf="@+id/text_detail"
                app:layout_constraintTop_toBottomOf="@+id/text_consultation_title"
                app:layout_constraintVertical_bias="0.35" />

            <TextView
                android:id="@+id/text_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_detail"
                android:textColor="#F8F5F5"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/text_title"
                app:layout_constraintTop_toBottomOf="@+id/text_title"
                app:layout_constraintVertical_bias="0.35" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/replay_text"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:paddingStart="70dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/replies"
                android:textColor="#251412"
                android:textColorHighlight="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/text_title"
                app:layout_constraintTop_toBottomOf="@+id/text_title"
                app:layout_constraintVertical_bias="0.566" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/replay_list"
            android:layout_width="match_parent"
            android:layout_height="438dp"
            android:background="#FFFFFF"
            android:paddingTop="10dp"
            tools:listitem="@layout/replies_list" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/add_replay"
                    android:layout_width="311dp"
                    android:layout_height="68dp"
                    android:autofillHints="@string/add_replay"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/add_replay"
                    android:inputType="textMultiLine"
                    android:paddingStart="40dp"
                    android:paddingLeft="40dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:textColor="#131212"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.347"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.4" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/endblue"
                    android:contentDescription="@string/send_replay"
                    android:scrollbarThumbHorizontal="@drawable/gradientbackground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/add_replay"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_send" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
